Skipping LiveTests on mvn plugin tests execution

--- a/pom.xml
+++ b/pom.xml
@@ -148,8 +148,10 @@
 
 					<dependenciesToScan>
 						<dependency>org.openmrs.module.eptsreports</dependency>
-
 					</dependenciesToScan>
+					<excludes>
+						<exclude>**/LiveTests.java</exclude>
+					</excludes>
 
 				</configuration>
 			</plugin>
